# final-project-MasonPride

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
docs/: conftest.html  index.html
docs/SecondhandAuto/: Main.html  Web.html  index.html
docs/SecondhandAuto/api/: GetMarketValue.html  index.html
docs/SecondhandAuto/data/: CustomVehicle.html  Vehicle.html  index.html
docs/SecondhandAuto/data/lot/: Lot.html  index.html
docs/SecondhandAuto/data/sedans/: HondaSedan.html  KiaSedan.html  Sedan.html  ToyotaSedan.html  index.html
docs/SecondhandAuto/data/suvs/: BuikSUV.html  ChevroletSUV.html  SUV.html  ToyotaSUV.html  index.html
docs/SecondhandAuto/data/trucks/: ChevroletTruck.html  DodgeTruck.html  FordTruck.html  Truck.html  index.html
docs/SecondhandAuto/web/: NewVehicleForm.html  WebController.html  index.html
src/: __init__.py  __main__.py  conftest.py
src/SecondhandAuto/: Main.py  Web.py  __init__.py
src/SecondhandAuto/api/: GetMarketValue.py
src/SecondhandAuto/data/: CustomVehicle.py  Vehicle.py  __init__.py
src/SecondhandAuto/data/lot/: Lot.py
src/SecondhandAuto/data/sedans/: HondaSedan.py  KiaSedan.py  Sedan.py  ToyotaSedan.py
src/SecondhandAuto/data/suvs/: BuikSUV.py  ChevroletSUV.py  SUV.py  ToyotaSUV.py
src/SecondhandAuto/static/: custom.css
src/SecondhandAuto/templates/: index.html  layout.html  lot.html  market_value.html  sell_form.html  sell_success_form.html
src/SecondhandAuto/web/: NewVehicleForm.py  WebController.py
test/: __init__.py
test/SecondhandAuto/data/: test_CustomVehicle.py
(+16 files in other folders)
