[metadata]
name = SecondhandAuto
version = 0.0.1
author = Mason Pride
author_email = mtpride@ksu.edu
description = A used car website and data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KSU-CC-410-Spring-2024/final-project-MasonPride
classifiers = 
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"

[options]
packages = find:
python_requires = >=3.6
include-package-data = True

[options.package_data]
SecondhandAuto = py.typed